# pyrite-mx

./: .gitignore  ATTRACT — A Vision for Computing Next Paradigm.md  ATTRACT — The Geometry of Coherence.md  LICENSE  Monolith.md  README.md  Toward a mature Monolith.md  pyproject.toml
examples/: e01_tk_main_window.py  ex2.py  ex3.sh
pyrite-mx/: LICENSE  README.md  pyproject.toml
pyrite-mx/src/pyrite/monolith/: __init__.py
src/pyrite/attract/: __init__.py  config.py
src/pyrite/gui/: __init__.py  gui01x0_tktraits.py  gui02x0_tktypes.py  gui03x0_tktools.py  gui04x1_tkliterals.py  gui05x1_tkext.py  gui06x2_tktraits.py  gui07x2_tktools.py  gui08x2_tktypes.py  gui11x0_wintraits.py  gui12x0_wintypes.py  gui13x0_winapi.py  gui14x1_wintraits.py  gui15x1_wintypes.py  gui16x1_winapi.py  gui17x2_wintools.py  guiX2x3_tools.py  guiX3x3_types.py  guiXXx4_gui.py
src/pyrite/gui/tkx/: wrapframe.py
src/pyrite/helpers/: __init__.py
src/pyrite/monolith/: __init__.py  pyrite_monolith.py
src/pyrite/monolith/layers/: __init__.py  l01x0_common_layers.py  l02x1_tk_layers.py  l03x1_textual_layers.py  textual.py  tk.py
src/pyrite/smarts/: __init__.py
src/pyrite/terminal/: ansi.py
src/pyrite/tools/shell/: attract_locate.py  pyrite_shell.py  pyrite_shell.py.prompt_history.txt  window_rake.py
