[project]
name = "pyrite-mx"
version = "0.1.4"
description = "Pyrite-MX: Focus only on what truly matters. No boilerplate. No distractions."
authors = [{ name = "Sauro Abbondanzieri" }]
license = "Apache-2.0"
readme = "README.md"
requires-python = ">=3.8"
license-files = [
    "LICENSE",
]

[project.entry-points.console_scripts]
pyrite-hello="pyrite.pyrite_hello:main"
pyrite-shell="pyrite.tools.shell.pyrite_shell:main"
attract-locate="pyrite.tools.shell.attract_locate:main"
window-rake="pyrite.tools.shell.window_rake:main"


[project.urls]
#"Homepage" = "https://github.com/yourusername/pyrite-mx"
"Repository" = "https://github.com/quadrantica/pyrite-mx"
#"Documentation" = "https://github.com/yourusername/pyrite-mx"
#"Issues" = "https://github.com/yourusername/pyrite-mx/issues"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"



